--- a/css/creative.css
+++ b/css/creative.css
@@ -54,7 +54,7 @@ p {
   color: rgba(255, 255, 255, 0.7);
 }
 section {
-  padding: 50px 0;
+  padding: 30px 0;
 }
 aside {
   padding: 50px 0;
@@ -144,7 +144,7 @@ aside {
 header {
   position: relative;
   width: 100%;
-  min-height: auto;
+  min-height: 80%;
   -webkit-background-size: cover;
   -moz-background-size: cover;
   background-size: cover;
@@ -409,4 +409,36 @@ img::-moz-selection {
 }
 body {
   webkit-tap-highlight-color: #222222;
+}
+
+/*
+Custom CSS
+*/
+.inset {
+text-shadow: 0px -2px 0px #333,  0px 2px 3px #666;
+}
+
+.glow{
+  color:#fff;
+  text-shadow:2px 2px 10px #000000;
+}
+
+.vintage-retro{
+  color: #fff;
+  text-shadow: 3px 3px 0px #f05f40, 5px 5px 0px #707070;
+}
+
+.three-d{
+    text-shadow: 0 1px 0 #ccc,
+               0 2px 0 #c9c9c9,
+               0 3px 0 #bbb,
+               0 4px 0 #b9b9b9,
+               0 5px 0 #aaa,
+               0 6px 1px rgba(0,0,0,.1),
+               0 0 5px rgba(0,0,0,.1),
+               0 1px 3px rgba(0,0,0,.3),
+               0 3px 5px rgba(0,0,0,.2),
+               0 5px 10px rgba(0,0,0,.25),
+               0 10px 10px rgba(0,0,0,.2),
+               0 20px 20px rgba(0,0,0,.15);
 }
