--- a/css/creative.css
+++ b/css/creative.css
@@ -13,7 +13,7 @@ body {
   font-family: 'Merriweather', 'Helvetica Neue', Arial, sans-serif;
 }
 hr {
-  border-color: #f05f40;
+  border-color: #a41e35;
   border-width: 3px;
   max-width: 50px;
 }
@@ -24,7 +24,7 @@ a {
   -webkit-transition: all 0.35s;
   -moz-transition: all 0.35s;
   transition: all 0.35s;
-  color: #f05f40;
+  color: #a41e35;
 }
 a:hover,
 a:focus {
@@ -44,7 +44,7 @@ p {
   margin-bottom: 20px;
 }
 .bg-primary {
-  background-color: #f05f40;
+  background-color: #a41e35;
 }
 .bg-dark {
   background-color: #222222;
@@ -52,6 +52,9 @@ p {
 }
 .text-faded {
   color: rgba(255, 255, 255, 0.7);
+}
+.text-cherry {
+  color: rgba(164, 30, 53, 1);
 }
 section {
   padding: 30px 0;
@@ -74,7 +77,7 @@ aside {
   transition: all 0.35s;
 }
 .navbar-default .navbar-header .navbar-brand {
-  color: #f05f40;
+  color: #a41e35;
   font-family: 'Open Sans', 'Helvetica Neue', Arial, sans-serif;
   font-weight: 700;
   text-transform: uppercase;
@@ -92,11 +95,11 @@ aside {
 }
 .navbar-default .nav > li > a:hover,
 .navbar-default .nav > li > a:focus:hover {
-  color: #f05f40;
+  color: #a41e35;
 }
 .navbar-default .nav > li.active > a,
 .navbar-default .nav > li.active > a:focus {
-  color: #f05f40 !important;
+  color: #a41e35 !important;
   background-color: transparent;
 }
 .navbar-default .nav > li.active > a:hover,
@@ -128,7 +131,7 @@ aside {
     border-color: rgba(34, 34, 34, 0.05);
   }
   .navbar-default.affix .navbar-header .navbar-brand {
-    color: #f05f40;
+    color: #a41e35;
     font-size: 14px;
   }
   .navbar-default.affix .navbar-header .navbar-brand:hover,
@@ -141,7 +144,7 @@ aside {
   }
   .navbar-default.affix .nav > li > a:hover,
   .navbar-default.affix .nav > li > a:focus:hover {
-    color: #f05f40;
+    color: #a41e35;
   }
 }
 header {
@@ -179,9 +182,9 @@ header .header-content .header-content-inner hr {
 }
 header .header-content .header-content-inner p {
   font-weight: 300;
-  color: rgba(255, 255, 255, 1);
+  color: white;
   font-size: 18px;
-  margin-bottom: 50px;
+  margin-bottom: 10px;
 }
 @media (min-width: 768px) {
   header {
@@ -280,7 +283,7 @@ header .header-content .header-content-inner p {
   margin: 0 auto 20px;
 }
 .text-primary {
-  color: #f05f40;
+  color: #a41e35;
 }
 .no-gutter > [class*='col-'] {
   padding-right: 0;
@@ -336,8 +339,8 @@ fieldset[disabled] .btn-default.active {
 }
 .btn-primary {
   color: #ffffff;
-  background-color: #f05f40;
-  border-color: #f05f40;
+  background-color: #a41e35;
+  border-color: #ff6b6b;
   -webkit-transition: all 0.35s;
   -moz-transition: all 0.35s;
   transition: all 0.35s;
@@ -375,11 +378,11 @@ fieldset[disabled] .btn-primary:active,
 .btn-primary.disabled.active,
 .btn-primary[disabled].active,
 fieldset[disabled] .btn-primary.active {
-  background-color: #f05f40;
+  background-color: #a41e35;
   border-color: #f05f40;
 }
 .btn-primary .badge {
-  color: #f05f40;
+  color: #a41e35;
   background-color: #ffffff;
 }
 .btn {
@@ -417,18 +420,22 @@ body {
 /*
 Custom CSS
 */
+.btn-margin-head{
+  margin: 5px;
+}
+
 .inset {
 text-shadow: 0px -2px 0px #333,  0px 2px 3px #666;
 }
 
 .glow{
   color:#fff;
-  text-shadow:2px 2px 10px #000000;
+  text-shadow:2px 2px 10px #a41e35;
 }
 
 .vintage-retro{
   color: #fff;
-  text-shadow: 3px 3px 0px #f05f40, 5px 5px 0px #707070;
+  text-shadow: 3px 3px 0px #a41e35, 5px 5px 0px #707070;
 }
 
 .three-d{
@@ -548,3 +555,4 @@ text-shadow: 0px -2px 0px #333,  0px 2px 3px #666;
         height: 20px;
     }
 }
+
