--- a/css/creative.css
+++ b/css/creative.css
@@ -150,20 +150,18 @@ aside {
 header {
   position: relative;
   width: 100%;
-  min-height: 80%;
+  min-height: auto;
   -webkit-background-size: cover;
   -moz-background-size: cover;
   background-size: cover;
   -o-background-size: cover;
   background-position: center;
   background-image: url('../img/header.jpg');
-  text-align: center;
   color: white;
     /* Create the parallax scrolling effect */
-    background-attachment: fixed;
-    background-position: center;
-    background-repeat: no-repeat;
-    
+  background-attachment: fixed;
+  background-position: center;
+  background-repeat: no-repeat;
 }
 header .header-content {
   position: relative;
@@ -556,3 +554,19 @@ text-shadow: 0px -2px 0px #333,  0px 2px 3px #666;
     }
 }
 
+@media handheld, only screen and (max-width: 769px) {
+    header { background-attachment: scroll !important; 
+      background-position: center center !important; 
+      min-width: 100%;
+      min-height: 100%;}
+}
+
+@media only screen
+and (min-device-width : 768px)
+and (max-device-width : 1024px)
+and (orientation : landscape) {
+    header { background-attachment: scroll !important; 
+      background-position: center center !important;
+      min-width: 100%;
+      min-height: 100%; }
+}
